[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/npc.gd" type="Script" id=1]
[ext_resource path="res://scenes/draw_node.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/state machine/npc_states/npc_walk.gd" type="Script" id=3]
[ext_resource path="res://sprites/AH_SpriteSheet_People1.png" type="Texture" id=4]
[ext_resource path="res://sprites/AH_Sprite_People_1_normal_1.png" type="Texture" id=5]
[ext_resource path="res://scripts/state machine/state_machine.gd" type="Script" id=6]
[ext_resource path="res://occluder_person.tres" type="OccluderPolygon2D" id=7]
[ext_resource path="res://sprites/exclamation mark.png" type="Texture" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[sub_resource type="Animation" id=2]
resource_name = "npc_down"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("npc_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=3]
resource_name = "npc_left"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("npc_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}

[sub_resource type="Animation" id=4]
resource_name = "npc_right"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("npc_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8 ]
}

[sub_resource type="Animation" id=5]
resource_name = "npc_up"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("npc_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11 ]
}

[sub_resource type="CircleShape2D" id=6]
radius = 40.0

[sub_resource type="Animation" id=7]
resource_name = "exclamation_anim"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -10.1229, -6.91939 ), Vector2( -10.1229, -30.3687 ), Vector2( -10.1229, -36.282 ), Vector2( -10.1229, -30.3687 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/exclamation_mark:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="npc_2" type="KinematicBody2D" groups=[
"stealable",
]]
position = Vector2( 271.732, 203.57 )
collision_layer = 8
collision_mask = 9
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="npc_sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
normal_map = ExtResource( 5 )
vframes = 4
hframes = 3
region_enabled = true
region_rect = Rect2( 144, 0, 48, 64 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/npc_down = SubResource( 2 )
anims/npc_left = SubResource( 3 )
anims/npc_right = SubResource( 4 )
anims/npc_up = SubResource( 5 )

[node name="sight" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="sight"]
shape = SubResource( 6 )

[node name="Inventory" type="Node" parent="."]

[node name="sword dummy" type="Node" parent="Inventory"]

[node name="state_machine" type="Node" parent="."]
script = ExtResource( 6 )
start_state = NodePath("../../npc_2/state_machine/walk")

[node name="walk" type="Node" parent="state_machine"]
script = ExtResource( 3 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = ExtResource( 7 )

[node name="draw_node" parent="." instance=ExtResource( 2 )]
radius = 40.0

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -10.1229, -30.3687 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="button_prompt" type="Panel" parent="CanvasLayer"]
self_modulate = Color( 1, 1, 1, 0.498039 )
margin_left = 261.609
margin_top = 173.201
margin_right = 281.609
margin_bottom = 193.201
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/button_prompt"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "E"
align = 1
valign = 1

[node name="exclamation_mark" type="TextureRect" parent="CanvasLayer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 264.876
margin_top = 183.403
margin_right = 277.876
margin_bottom = 195.403
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exclamation_anim" type="AnimationPlayer" parent="."]
anims/exclamation_anim = SubResource( 7 )
[connection signal="body_entered" from="sight" to="." method="_on_sight_body_entered"]
[connection signal="body_exited" from="sight" to="." method="_on_sight_body_exited"]
